training polynomial regression models done

--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -320,6 +320,20 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_15254/1989827619.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -379,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -450,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -475,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -556,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -780,7 +794,7 @@
        "7    NaN  0.0        0.0         2.0    -3.0      3  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -857,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -886,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -934,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -962,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1007,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1050,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1119,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1146,8 +1160,8 @@
     "    # R^2 the coefficient of determination\n",
     "    # YOUR CODE HERE\n",
     "\n",
-    "    train_r2 = lrmodel.score(tr_x, tr_y)\n",
-    "    val_r2 = lrmodel.score(v_x, v_y)\n",
+    "    train_r2 = model.score(tr_x, tr_y)\n",
+    "    val_r2 = model.score(v_x, v_y)\n",
     "    \n",
     "    # raise NotImplementedError()\n",
     "    \n",
@@ -1186,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1230,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1291,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1306,7 +1320,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
@@ -1338,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1391,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1438,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1453,7 +1478,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
@@ -1491,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1532,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1596,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1610,7 +1646,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ridge({'alpha': 0.05, 'fit_intercept': True})\n",
+      "\tTrain R^2: 0.841, Val  R^2: 0.845\n",
+      "\tTrain MSE: 5264.081, Val MSE: 5189.384\n",
+      "\tTrain MAE: 39.680, Val MAE: 38.645\n",
+      "LinearRegression\n",
+      "\tTrain R^2: 0.950, Val  R^2: 0.948\n",
+      "\tTrain MSE: 1665.583, Val MSE: 1732.763\n",
+      "\tTrain MAE: 20.201, Val MAE: 21.578\n",
+      "Ridge({'alpha': 0.01, 'fit_intercept': True})\n",
+      "\tTrain R^2: 0.950, Val  R^2: 0.948\n",
+      "\tTrain MSE: 1670.164, Val MSE: 1730.354\n",
+      "\tTrain MAE: 19.918, Val MAE: 21.220\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~10-15 lines).\n",
     "    1. Use PolynomialFeatures to create a version of the data with all features of degree 3. Make sure to allow interactions (interaction_only=False) and set include_bias=False.\n",
@@ -1632,6 +1687,11 @@
     "val_size = prop_vec[1] / (prop_vec[1] + prop_vec[2])\n",
     "val_x_pf, test_x_pf, val_y_pf, test_y_pf = train_test_split(temp_x_pf, temp_y_pf, train_size=val_size, random_state=seed)\n",
     "\n",
+    "ridge_nopf = search_train_eval(Ridge(random_state=seed), param_grid={'alpha': [0.5, 0.1, 0.05, 0.01, 0.005], 'fit_intercept': (True, False)})\n",
+    "lr_pf = LinearRegression().fit(train_x_pf, train_y_pf)\n",
+    "print(lr_pf.__class__.__name__)\n",
+    "r2_mse_mae_eval(lr_pf, train_x_pf, train_y_pf, val_x_pf, val_y_pf, pref='\\t')\n",
+    "ridge_pf = search_train_eval(Ridge(random_state=seed), param_grid={'alpha': [0.5, 0.1, 0.05, 0.01, 0.005], 'fit_intercept': (True, False)}, tr_x=train_x_pf, tr_y=train_y_pf, v_x=val_x_pf, v_y=val_y_pf)\n",
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -1640,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1656,19 +1716,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m train_x_pf\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m val_x_pf\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mamin(train_x_pf) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m np\u001b[38;5;241m.\u001b[39mamax(train_x_pf) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mridge_nopf\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_pf\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m var_exists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mridge_pf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m ridge_nopf\u001b[38;5;241m.\u001b[39mcoef_\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m14\u001b[39m,)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" [ASSERTS] Checks for task 3a. \"\"\"\n",
     "assert var_exists('all_x_pf') and all_x_pf.shape == (17379, 679)\n",
@@ -1705,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1719,12 +1767,44 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 3 important features for ridge_nopf:\n",
+      "\t workingday: -30.9675305626962\n",
+      "\t hour: 53.39184972666725\n",
+      "\t registered: 922.4466616477275\n",
+      "Top 3 important features for lr_pf:\n",
+      "\t workingday: 246267267223102.84\n",
+      "\t year^2 weekday: -355545725707258.3\n",
+      "\t year weekday: 355545725707298.3\n",
+      "Top 3 important features for ridge_pf:\n",
+      "\t registered^2: 2024.869879159494\n",
+      "\t registered nsqrtc^2: -4686.405317007725\n",
+      "\t registered nsqrtc: 4731.443687538852\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~5-7 lines).\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "def print_important_features(model, feature_names, model_name):\n",
+    "    coefs = model.coef_\n",
+    "    top_features_indices = np.argsort(np.abs(coefs))[-3:]\n",
+    "    print(f\"Top 3 important features for {model_name}:\")\n",
+    "    for i in top_features_indices:\n",
+    "        print(f\"\\t {feature_names[i]}: {coefs[i]}\")\n",
+    "\n",
+    "print_important_features(ridge_nopf, features, \"ridge_nopf\")\n",
+    "poly_feature_names = poly.get_feature_names_out(input_features=features)\n",
+    "print_important_features(lr_pf, poly_feature_names, \"lr_pf\")\n",
+    "print_important_features(ridge_pf, poly_feature_names, \"ridge_pf\")\n",
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
@@ -1749,7 +1829,7 @@
     "\"\"\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# THIS CODE CELL IS INTENTIONALLY LEFT EMPTY --- DO NOT MODIFY THIS CELL\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -1774,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1789,14 +1869,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The ridge_pf model (Regularized linear regression with polynomial features). There are two reasons 1. The polynomial features tend to perform better and 2. A regularized model is less prone to overfit and it's slightly better than lr_pf (linear on polynomial data without regularization).    \n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
