training polynomial regression models done

--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1876,7 +1876,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1884,7 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: The ridge_pf model (Regularized linear regression with polynomial features). There are two reasons 1. The polynomial features tend to perform better and 2. A regularized model is less prone to overfit and it's slightly better than lr_pf (linear on polynomial data without regularization).    \n",
+    "## Answer: The ridge_pf model (Regularized linear regression with polynomial features). There are two reasons 1. The polynomial features tend to perform better and 2. A regularized model has less risk to overfit and it's slightly better than lr_pf (linear on polynomial data without regularization).    \n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
