--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -321,28 +321,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_15254/1989827619.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------\n",
-      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
-      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
+      "### Python version: 3.9.6 (default, Oct 18 2022, 12:41:40) \n",
+      "[Clang 14.0.0 (clang-1400.0.29.202)]\n",
       "### NumPy version: 1.26.3\n",
-      "### Scikit-learn version: 1.4.0\n",
+      "### Scikit-learn version: 1.3.2\n",
       "------------\n"
      ]
     }
@@ -393,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -419,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -464,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -489,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -570,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -794,7 +780,7 @@
        "7    NaN  0.0        0.0         2.0    -3.0      3  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -871,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -900,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -948,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -976,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1021,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1064,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1133,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1200,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1244,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1305,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1327,7 +1313,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1416,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1463,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1485,7 +1471,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1568,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1632,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1659,10 +1645,10 @@
       "\tTrain R^2: 0.950, Val  R^2: 0.948\n",
       "\tTrain MSE: 1665.583, Val MSE: 1732.763\n",
       "\tTrain MAE: 20.201, Val MAE: 21.578\n",
-      "Ridge({'alpha': 0.01, 'fit_intercept': True})\n",
+      "Ridge({'alpha': 0.005, 'fit_intercept': True})\n",
       "\tTrain R^2: 0.950, Val  R^2: 0.948\n",
-      "\tTrain MSE: 1670.164, Val MSE: 1730.354\n",
-      "\tTrain MAE: 19.918, Val MAE: 21.220\n"
+      "\tTrain MSE: 1665.083, Val MSE: 1727.073\n",
+      "\tTrain MAE: 19.991, Val MAE: 21.328\n"
      ]
     }
    ],
@@ -1700,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1753,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1781,9 +1767,9 @@
       "\t year^2 weekday: -355545725707258.3\n",
       "\t year weekday: 355545725707298.3\n",
       "Top 3 important features for ridge_pf:\n",
-      "\t registered^2: 2024.869879159494\n",
-      "\t registered nsqrtc^2: -4686.405317007725\n",
-      "\t registered nsqrtc: 4731.443687538852\n"
+      "\t registered^2: 2140.6201366157725\n",
+      "\t registered nsqrtc^2: -5007.278002386946\n",
+      "\t registered nsqrtc: 5137.194086724501\n"
      ]
     }
    ],
@@ -1809,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1824,7 +1810,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# THIS CODE CELL IS INTENTIONALLY LEFT EMPTY --- DO NOT MODIFY THIS CELL\n",
@@ -1854,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1876,7 +1873,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1980,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2001,12 +1998,16 @@
     "def num_dt_splits(nodes): # should return the total number of splits in a decision tree. Must return an integer value.\n",
     "    assert nodes >= 0\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if nodes <= 1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return (nodes - 1)//2\n",
+    "    # raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2032,6 +2033,13 @@
     "    splits = num_dt_splits(nodes)\n",
     "    assert splits>=0 and splits == int(splits)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2075,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2089,17 +2097,42 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For dtmodel :\n",
+      "\tTrain R^2: 1.000, Val  R^2: 0.978\n",
+      "\tTrain MSE: 0.000, Val MSE: 741.429\n",
+      "\tTrain MAE: 0.000, Val MAE: 9.714\n",
+      "For dtregmodel :\n",
+      "\tTrain R^2: 0.969, Val  R^2: 0.968\n",
+      "\tTrain MSE: 1042.599, Val MSE: 1067.890\n",
+      "\tTrain MAE: 15.293, Val MAE: 16.496\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~5 lines)\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "print(\"For dtmodel :\")\n",
+    "dtmodel = DecisionTreeRegressor(random_state=seed).fit(train_x, train_y)\n",
+    "_ = r2_mse_mae_eval(dtmodel, train_x, train_y, val_x, val_y, pref='\\t')\n",
+    "print(\"For dtregmodel :\")\n",
+    "dtregmodel = DecisionTreeRegressor(random_state=seed, max_depth=8).fit(train_x, train_y)\n",
+    "_ = r2_mse_mae_eval(dtregmodel, train_x, train_y, val_x, val_y, pref='\\t')\n",
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2144,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2159,14 +2192,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: No, it does not seem to be overfitted. The regularized model is better than the models trained in task 2 and 3.\n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -2211,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2225,12 +2269,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Linear Regression Bagging] Train R^2: 0.841, Val  R^2: 0.845\n",
+      "[Linear Regression Bagging] Train MSE: 5264.740, Val MSE: 5188.391\n",
+      "[Linear Regression Bagging] Train MAE: 39.621, Val MAE: 38.568\n",
+      "\n",
+      "[DT Regression Bagging aka Random Forest] Train R^2: 0.990, Val  R^2: 0.985\n",
+      "[DT Regression Bagging aka Random Forest] Train MSE: 335.826, Val MSE: 487.294\n",
+      "[DT Regression Bagging aka Random Forest] Train MAE: 5.693, Val MAE: 8.144\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here (~3 lines)\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "\n",
+    "lr_bagging = BaggingRegressor(estimator=LinearRegression(), max_samples=0.5, random_state=seed).fit(train_x, train_y)\n",
+    "\n",
+    "dtr_bagging = BaggingRegressor(estimator=DecisionTreeRegressor(random_state=seed), max_samples=0.5, random_state=seed).fit(train_x, train_y)\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "_ = r2_mse_mae_eval(lr_bagging, train_x, train_y, val_x, val_y, pref='[Linear Regression Bagging] ')\n",
     "print()\n",
@@ -2239,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2306,7 +2371,9 @@
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
     "## Answer: \n",
+    "# 1. No, they perform equally. This is because linear regression is a model with low variance (they are not sensitive to small variances in the dataset) and bagging is effective with models that have high variance.\n",
     "#\n",
+    "# 2. Random forest is the best model out of all the models trained for this problem so far\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
