ensamble and decision tree models tested

--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2366,16 +2366,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
     "## Answer: \n",
-    "# 1. No, they perform equally. This is because linear regression is a model with low variance (they are not sensitive to small variances in the dataset) and bagging is effective with models that have high variance.\n",
+    "# 1. No, they perform equally. This is because linear regression is a model with low variance (they are not sensitive to small variances in the dataset) and bagging is effective with models that have high variance. Bagging does not improve bias to make linear regression model better.\n",
     "#\n",
-    "# 2. Random forest is the best model out of all the models trained for this problem so far\n",
+    "# 2. Random forest is the best model out of all the models trained for this problem so far.\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()"
    ]
   },
   {
