--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -321,14 +321,28 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_75085/1989827619.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------\n",
-      "### Python version: 3.9.6 (default, Oct 18 2022, 12:41:40) \n",
-      "[Clang 14.0.0 (clang-1400.0.29.202)]\n",
+      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
+      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
       "### NumPy version: 1.26.3\n",
-      "### Scikit-learn version: 1.3.2\n",
+      "### Scikit-learn version: 1.4.0\n",
       "------------\n"
      ]
     }
@@ -379,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -450,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -475,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -556,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -780,7 +794,7 @@
        "7    NaN  0.0        0.0         2.0    -3.0      3  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -857,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -886,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -934,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -962,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1007,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1036,12 +1050,12 @@
     "\n",
     "\n",
     "# First split to separate out the training set\n",
-    "train_x, temp_x, train_y, temp_y = train_test_split(scaled_all_x, all_y, test_size=1-(prop_vec[0]/sum(prop_vec)), random_state=42)\n",
+    "train_x, temp_x, train_y, temp_y = train_test_split(scaled_all_x, all_y, test_size=1-(prop_vec[0]/sum(prop_vec)), random_state=seed)\n",
     "\n",
     "val_size = prop_vec[1] / (prop_vec[1] + prop_vec[2])\n",
     "\n",
     "# Second split to separate out the validation and test sets\n",
-    "val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, train_size=val_size, random_state=42)\n",
+    "val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, train_size=val_size, random_state=seed)\n",
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
@@ -1050,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1119,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1161,8 +1175,8 @@
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
     "\n",
-    "    train_mse = mean_squared_error(train_pred, tr_y)\n",
-    "    val_mse = mean_squared_error(val_pred, v_y)\n",
+    "    train_mse = mean_squared_error(tr_y, train_pred,)\n",
+    "    val_mse = mean_squared_error(v_y, val_pred)\n",
     "    \n",
     "    # raise NotImplementedError()\n",
     "\n",
@@ -1173,8 +1187,8 @@
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
     "    \n",
-    "    train_mae = mean_absolute_error(train_pred, tr_y)\n",
-    "    val_mae = mean_absolute_error(val_pred, v_y)\n",
+    "    train_mae = mean_absolute_error(tr_y, train_pred)\n",
+    "    val_mae = mean_absolute_error(v_y, val_pred)\n",
     "    \n",
     "    #raise NotImplementedError()\n",
     "\n",
@@ -1186,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1230,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1291,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1313,7 +1327,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1402,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1449,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1471,7 +1485,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1554,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1618,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1686,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1739,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1795,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1817,7 +1831,7 @@
        "\" THIS CODE CELL IS INTENTIONALLY LEFT EMPTY.  Remove the 'raise NotImplementedError' line. You should leave this cell empty (it is used for autograding). (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1873,7 +1887,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 55,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1977,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2007,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2083,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2132,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2177,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2199,7 +2213,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2304,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2351,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2373,7 +2387,7 @@
        "\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
       ]
      },
-     "execution_count": 87,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2519,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2546,7 +2560,12 @@
     "        \"\"\"Put your code here (~3-4 lines)\n",
     "        \"\"\"\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        \n",
+    "        weak_learner = random_weak_learner(candidates_fn)\n",
+    "        fidx = np.random.choice(num_features, size=num_sel_features, replace=False)\n",
+    "        weak_learner.fit(tr_x[:,fidx], tr_y)\n",
+    "        \n",
+    "        # raise NotImplementedError()\n",
     "        \n",
     "        weak_learner_tup = (weak_learner, fidx)\n",
     "        ret.append(weak_learner_tup)\n",
@@ -2562,7 +2581,12 @@
     "    \"\"\"Put your code here (~3-4 lines). For each weak learner measure its *absolute errors* on tr_{x,y} (put that in 'errors').\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    for i, (learner, fidx) in enumerate(weak_learners):\n",
+    "        pred_y = learner.predict(tr_x[:,fidx])\n",
+    "        errors[:, i] = np.abs(pred_y - tr_y)\n",
+    "        \n",
+    "    #raise NotImplementedError()\n",
     "\n",
     "    bestidx = np.argmin(errors, axis=-1) # compute the weak learning idx with the lowest error\n",
     "    \n",
@@ -2576,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2621,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2635,7 +2659,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Val] R^2: 0.829, MSE: 3678.8, MAE: 39.9 [Elapsed: 17.8 seconds]\n"
+     ]
+    }
+   ],
    "source": [
     "st = time.time()\n",
     "\n",
@@ -2644,7 +2676,10 @@
     "    2. train the ensemble on s1_{x,y} [do not forget to use the *last* digit of your UFID].\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "s1_x, s2_x, s1_y, s2_y = train_test_split(train_x, train_y, test_size=0.3, random_state=seed)\n",
+    "wls = train_ensemble(s1_x, s1_y, lambda:weak_learner_candidates(4))\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "# train the gating on s2_{x,y}\n",
     "gating, errors, bestidx = train_gating(wls, s2_x, s2_y)\n",
@@ -2655,7 +2690,12 @@
     "    compute the R^2, MSE, MAE on the validation data (using 'pred_y') and store the result as 'val_r2', 'val_mse', 'val_mae'\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "val_r2 = r2_score(val_y, pred_y)\n",
+    "val_mse = mean_squared_error(val_y, pred_y)\n",
+    "val_mae = mean_absolute_error(val_y, pred_y)\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "et = time.time()\n",
     "elapsed = et - st\n",
@@ -2664,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2711,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2725,13 +2765,45 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Val] R^2: 0.965, MSE: 1176.9, MAE: 17.2 [Best hyperparams: 12, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Put your code here. Call the resulting best hyperparameters 'best_num_weak_learners' and 'best_num_sel_features'\n",
     "    Store the performance R^2, MSE, MAE as 'val_r2', 'val_mse', 'val_mae'\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "best_num_weak_learners = 0\n",
+    "best_num_sel_features = 0\n",
+    "val_r2 = 0\n",
+    "\n",
+    "val_mse = np.inf\n",
+    "val_mae = np.inf\n",
+    "\n",
+    "for num_weak_learners in [6, 8, 10, 12, 14]:\n",
+    "    for num_sel_features in [4,5,6,7,8,9,10]:\n",
+    "        wls = train_ensemble(s1_x, s1_y, lambda:weak_learner_candidates(4), num_weak_learners=num_weak_learners, num_sel_features=num_sel_features)\n",
+    "\n",
+    "        gating, errors, bestidx = train_gating(wls, s2_x, s2_y)\n",
+    "        pred_y = predict(wls, gating, val_x)\n",
+    "\n",
+    "        current_val_r2 = r2_score(val_y, pred_y)\n",
+    "        \n",
+    "        if current_val_r2 > val_r2:\n",
+    "            best_num_weak_learners = num_weak_learners\n",
+    "            best_num_sel_features = num_sel_features\n",
+    "            val_r2 = current_val_r2\n",
+    "            val_mse = mean_squared_error(val_y, pred_y)\n",
+    "            val_mae = mean_absolute_error(val_y, pred_y)\n",
+    "\n",
+    "#raise NotImplementedError()\n",
     "print('[Val] R^2: {:.3f}, MSE: {:.1f}, MAE: {:.1f} [Best hyperparams: {}, {}]'.format(val_r2, val_mse, val_mae, best_num_weak_learners, best_num_sel_features))"
    ]
   },
