--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_76220/1989827619.py:7: DeprecationWarning: \n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_77140/1989827619.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -2657,7 +2657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] R^2: 0.890, MSE: 3678.8, MAE: 39.9 [Elapsed: 18.2 seconds]\n"
+      "[Val] R^2: 0.890, MSE: 3678.8, MAE: 39.9 [Elapsed: 18.5 seconds]\n"
      ]
     }
    ],
@@ -2763,7 +2763,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] R^2: 0.977, MSE: 778.7, MAE: 12.8 [Best hyperparams: 8, 4]\n"
+      "[Val] R^2: 0.972, MSE: 954.0, MAE: 14.8 [Best hyperparams: 12, 4]\n"
      ]
     }
    ],
@@ -2780,8 +2780,8 @@
     "val_mse = np.inf\n",
     "val_mae = np.inf\n",
     "\n",
-    "for num_weak_learners in [8, 12, 16, 20]:\n",
-    "    for num_sel_features in [3,5,7,9,11]:\n",
+    "for num_weak_learners in [8,12,16,20]:\n",
+    "    for num_sel_features in [4,5,7,9,10]:\n",
     "        wls = train_ensemble(s1_x, s1_y, lambda:weak_learner_candidates(4), num_weak_learners=num_weak_learners, num_sel_features=num_sel_features)\n",
     "\n",
     "        gating, errors, bestidx = train_gating(wls, s2_x, s2_y)\n",
