Pseudo-Huber Loss implementation and training done

--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2561,7 +2561,9 @@
     "    ### Note 1: use 'lmbda' (lambda) -- the regularization hyperparameter.\n",
     "    ### Note 2: we do not regularize the bias/intercept b\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    reg_grad = np.zeros_like(theta)\n",
+    "    reg_grad[1:] = lmbda * theta[1:]\n",
+    "    # raise NotImplementedError()\n",
     "    assert reg_grad.shape == theta.shape\n",
     "    \n",
     "    return reg_grad"
@@ -2569,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2624,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2638,7 +2640,98 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Iter 0 (epoch 0)] train loss: 5.04, lr: 0.002000000, theta diff (l2-norm): 0.008002063.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.90, lr: 0.000649468, theta diff (l2-norm): 0.007612885.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.67, lr: 0.000539367, theta diff (l2-norm): 0.010415718.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.55, lr: 0.000488873, theta diff (l2-norm): 0.013160578.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.61, lr: 0.000457949, theta diff (l2-norm): 0.015755325.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.65, lr: 0.000436346, theta diff (l2-norm): 0.018185311.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.59, lr: 0.000420062, theta diff (l2-norm): 0.020432843.\n",
+      "[i: 0] -- Lambda: 0.000, L2-norm of w: 1.711\n",
+      "Train R^2: -0.870, Val  R^2: -0.837\n",
+      "Train MSE: 651.707, Val MSE: 646.622\n",
+      "Train MAE: 18.278, Val MAE: 18.091\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 4.69, lr: 0.002000000, theta diff (l2-norm): 0.006765470.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.66, lr: 0.000649468, theta diff (l2-norm): 0.006734572.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.69, lr: 0.000539367, theta diff (l2-norm): 0.009259806.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.62, lr: 0.000488873, theta diff (l2-norm): 0.011691126.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.72, lr: 0.000457949, theta diff (l2-norm): 0.014042829.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.68, lr: 0.000436346, theta diff (l2-norm): 0.016372625.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.68, lr: 0.000420062, theta diff (l2-norm): 0.018623963.\n",
+      "[i: 1] -- Lambda: 0.010, L2-norm of w: 2.120\n",
+      "Train R^2: -0.903, Val  R^2: -0.880\n",
+      "Train MSE: 663.202, Val MSE: 661.712\n",
+      "Train MAE: 18.412, Val MAE: 18.222\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 4.78, lr: 0.002000000, theta diff (l2-norm): 0.007352100.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.85, lr: 0.000649468, theta diff (l2-norm): 0.007058779.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.76, lr: 0.000539367, theta diff (l2-norm): 0.009790581.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.71, lr: 0.000488873, theta diff (l2-norm): 0.012392978.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.55, lr: 0.000457949, theta diff (l2-norm): 0.014761913.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.64, lr: 0.000436346, theta diff (l2-norm): 0.017204042.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.53, lr: 0.000420062, theta diff (l2-norm): 0.019354576.\n",
+      "[i: 2] -- Lambda: 0.100, L2-norm of w: 1.883\n",
+      "Train R^2: -0.981, Val  R^2: -0.941\n",
+      "Train MSE: 690.316, Val MSE: 683.205\n",
+      "Train MAE: 18.445, Val MAE: 18.184\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 4.64, lr: 0.002000000, theta diff (l2-norm): 0.008774112.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.69, lr: 0.000649468, theta diff (l2-norm): 0.008568540.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.70, lr: 0.000539367, theta diff (l2-norm): 0.011305621.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.70, lr: 0.000488873, theta diff (l2-norm): 0.014036607.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.67, lr: 0.000457949, theta diff (l2-norm): 0.016411708.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.62, lr: 0.000436346, theta diff (l2-norm): 0.018646966.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.73, lr: 0.000420062, theta diff (l2-norm): 0.020892705.\n",
+      "[i: 3] -- Lambda: 1.000, L2-norm of w: 1.264\n",
+      "Train R^2: -0.948, Val  R^2: -0.908\n",
+      "Train MSE: 678.969, Val MSE: 671.821\n",
+      "Train MAE: 18.244, Val MAE: 17.957\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 4.71, lr: 0.002000000, theta diff (l2-norm): 0.043860569.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.70, lr: 0.000649468, theta diff (l2-norm): 0.016724946.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.77, lr: 0.000539367, theta diff (l2-norm): 0.014607984.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.61, lr: 0.000488873, theta diff (l2-norm): 0.013755377.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.60, lr: 0.000457949, theta diff (l2-norm): 0.014203969.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.55, lr: 0.000436346, theta diff (l2-norm): 0.015060838.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.55, lr: 0.000420062, theta diff (l2-norm): 0.016516366.\n",
+      "[i: 4] -- Lambda: 10.000, L2-norm of w: 0.156\n",
+      "Train R^2: -0.900, Val  R^2: -0.865\n",
+      "Train MSE: 662.355, Val MSE: 656.642\n",
+      "Train MAE: 18.079, Val MAE: 17.847\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 4.75, lr: 0.002000000, theta diff (l2-norm): 0.527408412.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.64, lr: 0.000649468, theta diff (l2-norm): 0.005909283.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.62, lr: 0.000539367, theta diff (l2-norm): 0.007866363.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.50, lr: 0.000488873, theta diff (l2-norm): 0.009771983.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.30, lr: 0.000457949, theta diff (l2-norm): 0.011294288.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.35, lr: 0.000436346, theta diff (l2-norm): 0.012987352.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.32, lr: 0.000420062, theta diff (l2-norm): 0.014488378.\n",
+      "[i: 5] -- Lambda: 100.000, L2-norm of w: 0.020\n",
+      "Train R^2: -0.865, Val  R^2: -0.831\n",
+      "Train MSE: 650.213, Val MSE: 644.630\n",
+      "Train MAE: 17.813, Val MAE: 17.576\n",
+      "\n",
+      "[Iter 0 (epoch 0)] train loss: 5.00, lr: 0.002000000, theta diff (l2-norm): 4.040340615.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.99, lr: 0.000649468, theta diff (l2-norm): 0.007763696.\n",
+      "[Iter 200 (epoch 14)] train loss: 4.99, lr: 0.000539367, theta diff (l2-norm): 0.010684778.\n",
+      "[Iter 300 (epoch 21)] train loss: 4.93, lr: 0.000488873, theta diff (l2-norm): 0.013405176.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.75, lr: 0.000457949, theta diff (l2-norm): 0.015790827.\n",
+      "[Iter 500 (epoch 35)] train loss: 4.78, lr: 0.000436346, theta diff (l2-norm): 0.017698554.\n",
+      "[Iter 600 (epoch 42)] train loss: 4.64, lr: 0.000420062, theta diff (l2-norm): 0.019439768.\n",
+      "[i: 6] -- Lambda: 1000.000, L2-norm of w: 0.001\n",
+      "Train R^2: -1.021, Val  R^2: -0.983\n",
+      "Train MSE: 704.497, Val MSE: 698.125\n",
+      "Train MAE: 18.909, Val MAE: 18.650\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "X_with_b = np.c_[np.ones((train_x.shape[0],1)), train_x]\n",
     "val_x_with_b = np.c_[np.ones((val_x.shape[0],1)), val_x]\n",
@@ -2655,20 +2748,36 @@
     "batch_size = 1000\n",
     "\n",
     "best_lmbda = None\n",
+    "best_performance = float('inf')\n",
     "\n",
     "lmbdas = np.array([0.0, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0])\n",
     "for i, lmbda in enumerate(lmbdas):\n",
     "    reg_fn = lambda _t: l2_regularize(_t, lmbda)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    grph = lambda _t, _x, _y: gradient_pseudohuber(_t, _x, _y, delta, reg_fn)\n",
+    "    model_fns_tup = (predict_linear, loss_ph, grph)\n",
+    "    \n",
+    "    model_dc = generic_partition_shuffle_sgd(X_with_b, train_y, model_fns_tup, init_params_fn, lr_sched_fn, val_data=(val_x_with_b, val_y), num_epochs=50, batch_size=1000, \n",
+    "                               clip_gradient=False, verbose=True, verb_freq=np.maximum(1, 100000//batch_size))\n",
+    "    theta = model_dc['theta']\n",
+    "    l2norm_w = np.linalg.norm(theta[1:], ord=2)\n",
+    "    \n",
+    "    #raise NotImplementedError()\n",
+    "    \n",
     "    print('[i: {}] -- Lambda: {:.3f}, L2-norm of w: {:.3f}'.format(i, lmbda, l2norm_w))\n",
-    "    _ = r2_mse_mae_eval(model_dc['theta'], train_x, train_y, val_x, val_y)\n",
-    "    print()"
+    "    performance_metrics = r2_mse_mae_eval(model_dc['theta'], train_x, train_y, val_x, val_y)\n",
+    "    print()\n",
+    "\n",
+    "    val_mse = performance_metrics[3]\n",
+    "    if val_mse < best_performance:\n",
+    "        best_performance = val_mse\n",
+    "        best_lmbda = lmbda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false,
