Principal component analysis done

--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -2845,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2859,12 +2859,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 12\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "def compute_pca(X, variance_threshold=0.9):\n",
+    "    pca = PCA()\n",
+    "    pca.fit(X)\n",
+    "    cumulative_variance = np.cumsum(pca.explained_variance_ratio_)\n",
+    "    k = np.argmax(cumulative_variance >= variance_threshold) + 1\n",
+    "    return pca, k\n",
+    "\n",
+    "# For unscaled data\n",
+    "pca_unscaled, k_90perc_unscaled = compute_pca(all_x)\n",
+    "all_x_transf = pca_unscaled.transform(all_x)\n",
+    "\n",
+    "pca_scaled, k_90perc_scaled = compute_pca(scaled_all_x)\n",
+    "scaled_all_x_transf = pca_scaled.transform(scaled_all_x)\n",
+    "\n",
+    "print(k_90perc_unscaled, k_90perc_scaled)\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -2936,10 +2960,10 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: We need to do feature scaling before applying PCA. Because it leads to a more balanced representation of the data's structure, where all features have an opportunity to contribute to the principal components equally. For example, here, only one feature has captured the variance of unscaled data  \n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
